[package]
name = "broadcast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
